--- a/svgstars.html
+++ b/svgstars.html
@@ -26,7 +26,21 @@
 </head>
 <body>
 	<svg id="drawing"></svg>
-	<div id="ui"></div>
+	<div id="ui">
+        <div>
+        <label>Count</label>
+        <input type="number" id="count"/>
+        </div>
+        <div>
+        <label>Angle</label>
+        <input type="number" id="angle"/>
+        </div>
+        <div>
+        <label>Growth</label>
+        <input type="number" id="growth"/>
+        </div>
+        <button type="button" id="drawButton">Draw</button>
+    </div>
     <script src="svgstars.js"></script>
 </body>
 </html>
