--- a/svgstars.html
+++ b/svgstars.html
@@ -29,15 +29,15 @@
 	<div id="ui">
         <div>
         <label>Count</label>
-        <input type="number" id="count"/>
+        <input type="number" id="count" value="3"/>
         </div>
         <div>
         <label>Angle</label>
-        <input type="number" id="angle"/>
+        <input type="number" id="angle" value="Math.PI/6"/>
         </div>
         <div>
         <label>Growth</label>
-        <input type="number" id="growth"/>
+        <input type="number" id="growth" value="Math.sqrt(3)"/>
         </div>
         <button type="button" id="drawButton">Draw</button>
     </div>
