--- a/svgstars.html
+++ b/svgstars.html
@@ -16,6 +16,7 @@
         }
         #ui {
             position: fixed;
+            z-index: 10;
             top: 0;
             right: 0;
             bottom: 0;
